Update to Java 11
Remove Commons IO dependency (WIP)